put all part together to understand prompt and calculate

--- a/math_langchain.ipynb
+++ b/math_langchain.ipynb
@@ -258,6 +258,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Input Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from langchain.schema import BaseOutputParser\n",
+    "from langchain.chains.router.llm_router import LLMRouterChain\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_community.llms import Ollama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Define LLM"
    ]
   },
@@ -270,38 +292,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_113603/4093896791.py:4: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "/tmp/ipykernel_70938/2906811197.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
       "  llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")\n"
      ]
     }
    ],
    "source": [
-    "from langchain_community.llms import Ollama\n",
-    "\n",
     "# Specify the remote server's URL\n",
     "llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Input Libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import re\n",
-    "from langchain.schema import BaseOutputParser\n",
-    "from langchain.chains.router.llm_router import LLMRouterChain\n",
-    "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n"
    ]
   },
   {
@@ -405,9 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_70938/3453207429.py:15: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  score_calculation_chain = LLMChain(llm=llm, prompt=score_calculation_prompt, verbose=True)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Create Formula Chains for Each Task/Formula\n",
@@ -419,7 +426,7 @@
     "    template=(\n",
     "        \"Customer Score Calculation:\\n\"\n",
     "        \"For the question: {question}, calculate the customer's score using the formula:\\n\"\n",
-    "        \"    score = log((years_in_bank)^3) / age\\n\"\n",
+    "        \"    score = sqrt(amount of income * month of income) - ((years_in_bank)^3 / age)\\n\"\n",
     "        \"where 'years_in_bank' is the number of years the customer has had an account in our bank, and 'age' is the customer's age.\\n\"\n",
     "        \n",
     "    )\n",
@@ -448,6 +455,8 @@
     "        \"For the question: {question}, use the formula:\\n\"\n",
     "        \"    amount_to_pay = total_amount - (number_of_paid_loans * amount_per_loan)\\n\"\n",
     "        \"to calculate the amount of money required to pay all the loans.\\n\"\n",
+    "        \"Provide only the arithmetic expression that calculates the interest.\\n\"\n",
+    "        \"For example, if total_amount=2000000 and number_of_paid_loans=9 and  amount_per_loan= 200, output something like: 2000000 -(9 * 200)\"\n",
     "        \n",
     "    )\n",
     ")\n",
@@ -463,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,6 +766,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " #====================\n",
+    "# 3. Parameter Extraction & Evaluation\n",
+    "# ====================\n",
+    "\n",
+    "# Define required parameters for each formula destination.\n",
+    "formula_required_params = {\n",
+    "    \"interest_calculation\": [\"deposit_amount\", \"months\"],\n",
+    "    \"loan_calculation\": [\"total_amount\", \"number_of_paid_loans\", \"amount_per_loan\"],\n",
+    "    \"score_calculation\": [\"years_in_bank\", \"age\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_parameters_generic(prompt: str, required_params: list) -> dict:\n",
+    "    \"\"\"\n",
+    "    Extract numbers from the prompt in order and assign them to the required parameters.\n",
+    "    This simple approach assumes that the order of numbers corresponds to the order of required parameters.\n",
+    "    \"\"\"\n",
+    "    extracted = {}\n",
+    "    numbers = re.findall(r\"([\\d,\\.]+)\", prompt)\n",
+    "    # Remove commas\n",
+    "    numbers = [num.replace(',', '') for num in numbers]\n",
+    "    for i, param in enumerate(required_params):\n",
+    "        if i < len(numbers):\n",
+    "            try:\n",
+    "                extracted[param] = float(numbers[i])\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "    return extracted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_missing_parameters(required_params: list, provided: dict) -> list:\n",
+    "    return [p for p in required_params if p not in provided]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_arithmetic_expression(text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Extract a valid arithmetic expression from the LLM chain output.\n",
+    "    \n",
+    "    This function searches for a LaTeX-style math block (delimited by \\[ and \\])\n",
+    "    and then removes any LaTeX formatting (like \\text{...}) as well as the left-hand side.\n",
+    "    \"\"\"\n",
+    "    # Look for a LaTeX math block.\n",
+    "    match = re.search(r\"\\\\\\[(.*?)\\\\\\]\", text, re.DOTALL)\n",
+    "    if match:\n",
+    "        expr = match.group(1).strip()\n",
+    "        # Remove \\text{...} wrappers.\n",
+    "        expr = re.sub(r\"\\\\text\\{(.*?)\\}\", r\"\\1\", expr)\n",
+    "        # Remove left-hand side if there's an equals sign.\n",
+    "        if \"=\" in expr:\n",
+    "            _, rhs = expr.split(\"=\", 1)\n",
+    "            expr = rhs.strip()\n",
+    "        # Replace LaTeX \\times with *.\n",
+    "        expr = expr.replace(r\"\\times\", \"*\")\n",
+    "        return expr\n",
+    "    # Fallback: try to extract a line that looks like an arithmetic expression.\n",
+    "    lines = text.splitlines()\n",
+    "    for line in lines:\n",
+    "        # A simple heuristic: if the line contains only allowed characters (numbers, letters, arithmetic operators)\n",
+    "        if re.match(r\"^[\\w\\-\\+\\*/\\(\\)\\.\\s]+$\", line):\n",
+    "            return line.strip()\n",
+    "    # If nothing matches, return the original text (may cause eval() to fail).\n",
+    "    return text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Router output: {'question': 'من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره', 'destination': 'interest_calculation', 'next_inputs': {'question': 'من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره'}}\n",
+      "Selected destination: interest_calculation\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mDeposit Interest Calculation:\n",
+      "For the question: من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره, calculate the deposit interest using the formula:\n",
+      "    interest = ((deposit_amount * months) / 12) * 0.25\n",
+      "where 'deposit_amount' is the amount of money deposited and 'months' is the number of months the money has been deposited.\n",
+      "Provide only the arithmetic expression that calculates the interest.\n",
+      "For example, if deposit_amount=2000000 and months=9, output something like: ((2000000 * 9)/12)*0.25\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Extracted formula: ((500000000 * months) / 12) * 0.25\n",
+      "Required parameters: ['deposit_amount', 'months']\n",
+      "Provided parameters: {'deposit_amount': 500000000.0}\n",
+      "the value for months is 3\n",
+      "Answer: 31250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================\n",
+    "# 4. Putting It All Together\n",
+    "# ====================\n",
+    "\n",
+    "# Example user input (e.g., in Persian for interest calculation)\n",
+    "user_input = \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
+    "# user_input = \"How much money should I pay to pay all my loans to the bank?\"\n",
+    "\n",
+    "# Use the router chain to decide which formula chain to use.\n",
+    "router_result = router_chain({\"question\": user_input})\n",
+    "destination = router_result[\"destination\"]\n",
+    "next_inputs = router_result[\"next_inputs\"]\n",
+    "\n",
+    "print(\"Router output:\", router_result)\n",
+    "print(\"Selected destination:\", destination)\n",
+    "\n",
+    "# Check that the destination chain exists.\n",
+    "if destination not in destination_chains:\n",
+    "    raise ValueError(f\"Destination '{destination}' not found in destination chains.\")\n",
+    "\n",
+    "# Use the selected formula chain to get the arithmetic expression.\n",
+    "# The chain should output an expression like \"((deposit_amount * months)/12)*0.25\"\n",
+    "chain_output = destination_chains[destination](next_inputs)\n",
+    "# Assume the output is a string (or a dict with key \"text\").\n",
+    "if isinstance(chain_output, dict) and \"text\" in chain_output:\n",
+    "    formula_str = chain_output[\"text\"]\n",
+    "else:\n",
+    "    formula_str = chain_output\n",
+    "\n",
+    "print(\"Extracted formula:\", formula_str)\n",
+    "\n",
+    "# Determine required parameters for the selected destination.\n",
+    "required_params = formula_required_params.get(destination, [])\n",
+    "print(\"Required parameters:\", required_params)\n",
+    "\n",
+    "# Extract any provided parameter values from the original question (or next_inputs[\"question\"])\n",
+    "provided_params = extract_parameters_generic(next_inputs[\"question\"], required_params)\n",
+    "print(\"Provided parameters:\", provided_params)\n",
+    "\n",
+    "# Identify any missing parameters and ask the user (here we use input() for demonstration).\n",
+    "missing_params = get_missing_parameters(required_params, provided_params)\n",
+    "if missing_params:\n",
+    "    for param in missing_params:\n",
+    "        value_str = input(f\"Please enter a value for {param}: \")\n",
+    "        print(f\"the value for {param} is {value_str}\")\n",
+    "        try:\n",
+    "            provided_params[param] = float(value_str)\n",
+    "        except ValueError:\n",
+    "            raise ValueError(f\"Invalid value provided for {param}.\")\n",
+    "\n",
+    "# Now, evaluate the extracted formula using eval() with the parameters.\n",
+    "try:\n",
+    "    result_value = eval(formula_str, provided_params)\n",
+    "except Exception as e:\n",
+    "    raise RuntimeError(f\"Error evaluating the formula: {e}\")\n",
+    "\n",
+    "# Optionally, round the result to 2 decimal places.\n",
+    "if isinstance(result_value, float) and result_value != int(result_value):\n",
+    "    result_value = round(result_value, 2)\n",
+    "else:\n",
+    "    result_value = int(result_value)\n",
+    "\n",
+    "print(f\"Answer: {result_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -845,6 +1060,13 @@
     "    print(f\"Final result from '{destination1}':\", final_result1)\n",
     "else:\n",
     "    print(\"Destination not found:\", destination1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try to use Mathchain to calculate formulas"
    ]
   },
   {
