--- a/math_langchain.ipynb
+++ b/math_langchain.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,8 +173,6 @@
     "#         \"Problem: {question}\"\n",
     "#     )\n",
     "# )\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# Use your local Ollama model.\n",
@@ -672,105 +670,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "# Define the formula as a string.\n",
-    "formula_str = \"((deposit_amount * months) / 12) * 0.25\"\n",
-    "\n",
-    "def extract_interest_parameters(question: str) -> dict:\n",
-    "    \"\"\"\n",
-    "    Extract numeric values from the question for interest calculation.\n",
-    "    This function uses regex to find all numbers in the text.\n",
-    "    \n",
-    "    For example:\n",
-    "      \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
-    "    It will extract numbers and assume that the first number is deposit_amount\n",
-    "    and, if present, the second number is months.\n",
-    "    \n",
-    "    Note: In a real-world application, you might want to handle \n",
-    "    non-Latin digits or multipliers like 'million' explicitly.\n",
-    "    \"\"\"\n",
-    "    extracted = {}\n",
-    "    # Find all numeric occurrences (this will catch integers or decimals)\n",
-    "    numbers = re.findall(r\"([\\d,\\.]+)\", question)\n",
-    "    # Remove commas and convert to float\n",
-    "    numbers = [num.replace(',', '') for num in numbers]\n",
-    "    \n",
-    "    if numbers:\n",
-    "        # Assume the first number is deposit_amount.\n",
-    "        extracted['deposit_amount'] = float(numbers[0])\n",
-    "    if len(numbers) > 1:\n",
-    "        # If a second number exists, assume it's the months.\n",
-    "        extracted['months'] = float(numbers[1])\n",
-    "    \n",
-    "    return extracted\n",
-    "\n",
-    "def get_missing_parameters(required_params: list, provided_params: dict) -> list:\n",
-    "    \"\"\"Return a list of parameters that are missing.\"\"\"\n",
-    "    return [param for param in required_params if param not in provided_params]\n",
-    "\n",
-    "# Assume that the router has determined the user wants an interest calculation.\n",
-    "# The required parameters for this formula:\n",
-    "required_params = ['deposit_amount', 'months']\n",
-    "\n",
-    "## \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracted parameters: {'deposit_amount': 500000000.0}\n",
-      "Answer: 52083333.33\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example user question (in this case partly in Persian):\n",
-    "user_question = \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
-    "\n",
-    "# Step 1: Extract any provided parameters.\n",
-    "provided_params = extract_interest_parameters(user_question)\n",
-    "print(\"Extracted parameters:\", provided_params)\n",
-    "\n",
-    "# Step 2: Identify missing parameters.\n",
-    "missing_params = get_missing_parameters(required_params, provided_params)\n",
-    "if missing_params:\n",
-    "    for param in missing_params:\n",
-    "        # In a real chat system, you would ask the user via the chat interface.\n",
-    "        # Here we use input() for demonstration.\n",
-    "        value_str = input(f\"Please enter a value for {param}: \")\n",
-    "        try:\n",
-    "            provided_params[param] = float(value_str)\n",
-    "        except ValueError:\n",
-    "            raise ValueError(f\"Invalid value provided for {param}.\")\n",
-    "\n",
-    "# Step 3: Evaluate the formula using eval().\n",
-    "try:\n",
-    "    result_value = eval(formula_str, provided_params)\n",
-    "except Exception as e:\n",
-    "    raise RuntimeError(f\"Error evaluating the formula: {e}\")\n",
-    "\n",
-    "# Step 4: Round the result to 2 decimal places (if needed).\n",
-    "if isinstance(result_value, float) and result_value != int(result_value):\n",
-    "    result_value = round(result_value, 2)\n",
-    "else:\n",
-    "    result_value = int(result_value)\n",
-    "\n",
-    "print(f\"Answer: {result_value}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -779,14 +678,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    " #====================\n",
-    "# 3. Parameter Extraction & Evaluation\n",
-    "# ====================\n",
-    "\n",
     "# Define required parameters for each formula destination.\n",
     "formula_required_params = {\n",
     "    \"interest_calculation\": [\"deposit_amount\", \"months\"],\n",
@@ -892,7 +787,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example user input \n",
+    "# user_input = \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
+    "user_input = \"How do I calculate my customer score in this bank?\"\n",
+    "# user_input = \"How much money should I pay to pay all my loans to the bank?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -939,15 +846,6 @@
     }
    ],
    "source": [
-    "# ====================\n",
-    "# 4. Putting It All Together\n",
-    "# ====================\n",
-    "\n",
-    "# Example user input (e.g., in Persian for interest calculation)\n",
-    "# user_input = \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
-    "user_input = \"How do I calculate my customer score in this bank?\"\n",
-    "# user_input = \"How much money should I pay to pay all my loans to the bank?\"\n",
-    "\n",
     "# Use the router chain to decide which formula chain to use.\n",
     "router_result = router_chain({\"question\": user_input})\n",
     "destination = router_result[\"destination\"]\n",
@@ -959,8 +857,6 @@
     "# Check that the destination chain exists.\n",
     "if destination not in destination_chains:\n",
     "    raise ValueError(f\"Destination '{destination}' not found in destination chains.\")\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# Use the selected formula chain to get the arithmetic expression.\n",
@@ -978,25 +874,6 @@
     "print(\"Extracted arithmetic expression:\")\n",
     "print(formula_str)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Use the selected formula chain to get the arithmetic expression.\n",
-    "# # The chain should output an expression like \"((deposit_amount * months)/12)*0.25\"\n",
-    "# chain_output = destination_chains[destination](next_inputs)\n",
-    "# # Assume the output is a string (or a dict with key \"text\").\n",
-    "# if isinstance(chain_output, dict) and \"text\" in chain_output:\n",
-    "#     raw_formula_str = chain_output[\"text\"]\n",
-    "# else:\n",
-    "#     raw_formula_str = chain_output\n",
-    "\n",
-    "# print(\"Raw formula output from chain:\")\n",
-    "# print(raw_formula_str)\n",
-    "\n",
-    "# # --- Call the extraction function here ---\n",
-    "# formula_str = extract_arithmetic_expression(raw_formula_str)\n",
-    "# print(\"Extracted arithmetic expression:\")\n",
-    "# print(formula_str)\n",
     "\n",
     "# Determine required parameters for the selected destination.\n",
     "required_params = formula_required_params.get(destination, [])\n",
@@ -1036,6 +913,13 @@
     "    result_value = int(result_value)\n",
     "\n",
     "print(f\"Answer: {result_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **************  The above way is the final solution **************"
    ]
   },
   {
@@ -1254,13 +1138,6 @@
     "else:\n",
     "    print(\"Destination not found:\", destination)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
