try to use pattern to get different parameters

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,9 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_98975/2906811197.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Specify the remote server's URL\n",
     "llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")"
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9795/1172675544.py:23: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "/tmp/ipykernel_98975/1172675544.py:23: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  score_calculation_chain = LLMChain(llm=llm, prompt=score_calculation_prompt, verbose=True)\n"
      ]
     }
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,8 +685,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Previous Version of Extract parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,8 +713,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### New Version"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def persian_to_english_digits(s: str) -> str:\n",
+    "    \"\"\"Convert Persian digits to English digits.\"\"\"\n",
+    "    mapping = str.maketrans('۰۱۲۳۴۵۶۷۸۹', '0123456789')\n",
+    "    return s.translate(mapping)\n",
+    "\n",
+    "def extract_parameter(prompt: str, patterns: list) -> float:\n",
+    "    \"\"\"\n",
+    "    Try a list of regex patterns and return the first matched number as a float.\n",
+    "    The patterns should contain one capturing group that extracts the number.\n",
+    "    \"\"\"\n",
+    "    for pattern in patterns:\n",
+    "        match = re.search(pattern, prompt)\n",
+    "        if match:\n",
+    "            number_str = match.group(1)\n",
+    "            number_str = persian_to_english_digits(number_str)\n",
+    "            try:\n",
+    "                return float(number_str)\n",
+    "            except ValueError:\n",
+    "                continue\n",
+    "    return None\n",
+    "\n",
+    "# extract_parameters_with_keywords\n",
+    "\n",
+    "def extract_parameters_generic(prompt: str, required_params: list) -> dict:\n",
+    "    \"\"\"\n",
+    "    Extract parameters based on keywords in the prompt.\n",
+    "    \n",
+    "    For this example, we assume:\n",
+    "      - 'years_in_bank' is near the word \"سال\"\n",
+    "      - 'amount_of_income' is near \"درآمد\" or \"میلیون\"\n",
+    "      - 'month_of_income' is near \"ماه\"\n",
+    "      - 'age' is near \"سن\"\n",
+    "    \"\"\"\n",
+    "    # Define patterns for each parameter.\n",
+    "    patterns = {\n",
+    "        'years_in_bank': [\n",
+    "            r'(\\d+(?:[.,]\\d+)?)\\s*سال'\n",
+    "        ],\n",
+    "        'amount_of_income': [\n",
+    "            r'درآمد\\s*(?:من\\s*معادل\\s*)?(\\d+(?:[.,]\\d+)?)',\n",
+    "            r'(\\d+(?:[.,]\\d+)?)\\s*میلیون'\n",
+    "        ],\n",
+    "        'month_of_income': [\n",
+    "            r'(\\d+(?:[.,]\\d+)?)\\s*ماه'\n",
+    "        ],\n",
+    "        'age': [\n",
+    "            r'(\\d+(?:[.,]\\d+)?)\\s*سن'\n",
+    "        ]\n",
+    "    }\n",
+    "    \n",
+    "    extracted = {}\n",
+    "    for param in required_params:\n",
+    "        if param in patterns:\n",
+    "            value = extract_parameter(prompt, patterns[param])\n",
+    "            if value is not None:\n",
+    "                extracted[param] = value\n",
+    "    return extracted\n",
+    "\n",
+    "# # Example usage:\n",
+    "# user_input = \"من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
+    "# required_params = ['amount_of_income', 'month_of_income', 'years_in_bank', 'age']\n",
+    "\n",
+    "# provided = extract_parameters_generic(user_input, required_params)\n",
+    "# print(\"Extracted parameters:\", provided)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Find missing parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,34 +855,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# user_input = \"من میخوام ببینم سود سپرده بانک اگه 500000000 پول بخوابونم چقدره\"\n",
     "# user_input = \"How do I calculate my customer score in this bank?\"\n",
-    "user_input = \"من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
-    "# user_input = \"I have account in the back for 3 years. My income is 4500 M Tomans. How much is my score?\"\n",
+    "# user_input = \"My income is around 2500 tomans.How do I calculate my customer score in this bank?\"\n",
+    "\n",
+    "# user_input = \"من ۳ ساله که توی بانک حساب دارم. درآمد من معادل 5 میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
+    "user_input = \"I have account in the back for 3 years. My income is 45 M Tomans. How much is my score?\"\n",
     "# user_input = \"How much money should I pay to pay all my loans to the bank?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Router output: {'question': 'من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟', 'destination': 'score_calculation', 'next_inputs': {'question': 'من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟'}}\n",
+      "Router output: {'question': 'I have account in the back for 3 years. My income is 45 M Tomans. How much is my score?', 'destination': 'score_calculation', 'next_inputs': {'question': 'I have account in the back for 3 years. My income is 45 M Tomans. How much is my score?'}}\n",
       "Selected destination: score_calculation\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mCustomer Score Calculation:\n",
-      "For the question: من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟, please calculate the customer's score using the following formula:\n",
+      "For the question: I have account in the back for 3 years. My income is 45 M Tomans. How much is my score?, please calculate the customer's score using the following formula:\n",
       "\n",
       "    score = math.sqrt(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\n",
       "\n",
@@ -796,16 +901,18 @@
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Raw formula output from chain:\n",
       "```python\n",
-      "math.sqrt(5500000000 * 12) - ((3)**3 / age)\n",
+      "math.sqrt(45_000_000 * 36) - ((3)**3 / age)\n",
       "```\n",
       "Extracted arithmetic expression:\n",
-      "math.sqrt(5500000000 * 12) - ((3)**3 / age)\n",
+      "math.sqrt(45_000_000 * 36) - ((3)**3 / age)\n",
       "Required parameters: ['amount_of_income', 'month_of_income', 'years_in_bank', 'age']\n",
-      "Provided parameters: {'amount_of_income': 3.0, 'years_in_bank': 5500.0}\n",
-      "the value for month_of_income is 6\n",
-      "the value for age is 38\n",
-      "Final parameters for evaluation: {'amount_of_income': 3.0, 'years_in_bank': 5500.0, 'month_of_income': 6.0, 'age': 38.0}\n",
-      "Answer: 256903.94\n"
+      "Provided parameters: {}\n",
+      "the value for amount_of_income is 1200\n",
+      "the value for month_of_income is 2\n",
+      "the value for years_in_bank is 5\n",
+      "the value for age is 30\n",
+      "Final parameters for evaluation: {'amount_of_income': 1200.0, 'month_of_income': 2.0, 'years_in_bank': 5.0, 'age': 30.0}\n",
+      "Answer: 40248.32\n"
      ]
     }
    ],
