pattern for finding diffparameters #1

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -721,9 +721,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted parameters: {'amount_of_income': 5500.0, 'years_in_bank': 3.0}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def persian_to_english_digits(s: str) -> str:\n",
@@ -784,12 +792,12 @@
     "                extracted[param] = value\n",
     "    return extracted\n",
     "\n",
-    "# # Example usage:\n",
-    "# user_input = \"من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
-    "# required_params = ['amount_of_income', 'month_of_income', 'years_in_bank', 'age']\n",
+    "# Example usage:\n",
+    "user_input = \"من ۳ ساله که توی بانک حساب دارم. درآمد من معادل ۵۵۰۰ میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
+    "required_params = ['amount_of_income', 'month_of_income', 'years_in_bank', 'age']\n",
     "\n",
-    "# provided = extract_parameters_generic(user_input, required_params)\n",
-    "# print(\"Extracted parameters:\", provided)\n"
+    "provided = extract_parameters_generic(user_input, required_params)\n",
+    "print(\"Extracted parameters:\", provided)\n"
    ]
   },
   {
