change the prompt to clean formula from values

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -290,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_308106/2906811197.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "/tmp/ipykernel_379251/2906811197.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
       "  llm = Ollama(model=\"phi4:latest\", base_url=\"http://127.0.0.1:11434\")\n"
      ]
     }
@@ -401,18 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_308106/1377076958.py:25: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  score_calculation_chain = LLMChain(llm=llm, prompt=score_calculation_prompt, verbose=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Create Formula Chains for Each Task/Formula\n",
@@ -430,9 +421,10 @@
     "        \"  - month_of_income: The number of months corresponding to the income period.\\n\"\n",
     "        \"  - years_in_bank: The number of years the customer has held an account with our bank.\\n\"\n",
     "        \"  - age: The age of the customer.\\n\\n\"\n",
+    "        \"Provide only the arithmetic expression using the variable names exactly as defined (e.g., amount_of_income, month_of_income, years_in_bank, age) and do not include any numeric literals as defaults.\\n\"\n",
     "        \"Provide only the arithmetic expression (without additional explanation) in a format that is compatible with Python's eval().\\n\"\n",
     "        \"For example, if amount_of_income=7000, month_of_income=9, years_in_bank=10, and age=40, output:\\n\"\n",
-    "        \"(7000 * 9) - ((10)**3 / 40)\"\n",
+    "        \"(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\"\n",
     "\n",
     "    )\n",
     ")\n",
@@ -449,8 +441,9 @@
     "        \"For the question: {question}, calculate the deposit interest using the formula:\\n\"\n",
     "        \"    interest = ((deposit_amount * months) / 12) * 0.25\\n\"\n",
     "        \"where 'deposit_amount' is the amount of money deposited and 'months' is the number of months the money has been deposited.\\n\"\n",
+    "        \"Provide only the arithmetic expression using the variable names exactly as defined (e.g., deposit_amount, months) and do not include any numeric literals as defaults.\\n\"\n",
     "        \"Provide only the arithmetic expression that calculates the interest.\\n\"\n",
-    "        \"For example, if deposit_amount=2000000 and months=9, output something like: ((2000000 * 9)/12)*0.25\"\n",
+    "        \"For example, if deposit_amount=2000000 and months=9, output something like: ((deposit_amount * months) / 12) * 0.25\"\n",
     "    )\n",
     ")\n",
     "interest_calculation_chain = LLMChain(llm=llm, prompt=interest_calculation_prompt, verbose=True)\n",
@@ -466,9 +459,10 @@
     "        \"  - total_amount: The total amount of money owed on all loans.\\n\"\n",
     "        \"  - number_of_paid_loans: The number of loans that have already been paid off.\\n\"\n",
     "        \"  - amount_per_loan: The fixed payment amount for each paid loan.\\n\\n\"\n",
+    "        \"Provide only the arithmetic expression using the variable names exactly as defined (e.g., total_amount, number_of_paid_loans, amount_per_loan) and do not include any numeric literals as defaults.\\n\"\n",
     "        \"Provide only the arithmetic expression (without any additional explanation) that calculates amount_to_pay.\\n\"\n",
     "        \"For example, if total_amount=2000000, number_of_paid_loans=9, and amount_per_loan=200, output:\\n\"\n",
-    "        \"    2000000 - (9 * 200)\"\n",
+    "        \"    total_amount - (number_of_paid_loans * amount_per_loan)\"\n",
     "    )\n",
     ")\n",
     "\n",
@@ -1585,21 +1579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Router output: {'question': 'I have account in the bank for 3 years. My income is 45 M Tomans. How much is my score?', 'destination': 'score_calculation', 'next_inputs': {'question': 'I have an account in the bank for 3 years. My income is 45 M Tomans. How much is my score?'}}\n",
+      "Router output: {'question': 'من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟', 'destination': 'score_calculation', 'next_inputs': {'question': 'من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟'}}\n",
       "Selected destination: score_calculation\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mCustomer Score Calculation:\n",
-      "For the question: I have an account in the bank for 3 years. My income is 45 M Tomans. How much is my score?, please calculate the customer's score using the following formula:\n",
+      "For the question: من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟, please calculate the customer's score using the following formula:\n",
       "\n",
       "    score = (amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\n",
       "\n",
@@ -1609,28 +1603,25 @@
       "  - years_in_bank: The number of years the customer has held an account with our bank.\n",
       "  - age: The age of the customer.\n",
       "\n",
+      "Provide only the arithmetic expression using the variable names exactly as defined (e.g., amount_of_income, month_of_income, years_in_bank, age) and do not include any numeric literals as defaults.\n",
       "Provide only the arithmetic expression (without additional explanation) in a format that is compatible with Python's eval().\n",
       "For example, if amount_of_income=7000, month_of_income=9, years_in_bank=10, and age=40, output:\n",
-      "(7000 * 9) - ((10)**3 / 40)\u001b[0m\n",
+      "(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Raw formula output from chain:\n",
-      "To calculate the customer's score using the given formula:\n",
-      "\n",
       "```python\n",
-      "(45_000_000 * 36) - ((3)**3 / age)\n",
+      "(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\n",
       "```\n",
-      "\n",
-      "Make sure to replace `age` with the actual age of the customer when evaluating this expression.\n",
       "Extracted arithmetic expression:\n",
-      "(45_000_000 * 36) - ((3)**3 / age)\n",
+      "(amount_of_income * month_of_income) - ((years_in_bank)**3 / age)\n",
       "Required parameters: ['amount_of_income', 'month_of_income', 'years_in_bank', 'age']\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3mGiven the following user input for customer score calculation:\n",
-      "\"I have an account in the bank for 3 years. My income is 45 M Tomans. How much is my score?\"\n",
+      "\"من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
       "\n",
       "Extract the following parameters as a JSON object:\n",
       "- amount_of_income: The total income amount of the customer.\n",
@@ -1649,28 +1640,26 @@
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "Parameter extraction result from LLM chain:\n",
-      "To extract the parameters from the given user input, we need to identify and assign values based on the provided information:\n",
+      "To extract the parameters from the given user input and construct a JSON object, we analyze the text:\n",
       "\n",
-      "1. **amount_of_income**: The total income amount mentioned is \"45 M Tomans.\"\n",
-      "2. **month_of_income**: There's no specific period for which this income is stated, so it remains null.\n",
-      "3. **years_in_bank**: The user mentions having an account in the bank for 3 years.\n",
-      "4. **age**: The age of the customer is not mentioned.\n",
+      "1. **amount_of_income**: The income is mentioned as \"5500 میلیون تومانه\", which translates to 5500 million tomans.\n",
+      "2. **month_of_income**: The period for this income isn't explicitly stated in months, so it's set to null.\n",
+      "3. **years_in_bank**: It mentions \"3 ساله که توی بانک حساب دارم\", indicating the customer has been with the bank for 3 years.\n",
+      "4. **age**: The age of the customer is not mentioned in the text, so it's set to null.\n",
       "\n",
-      "Here's how these parameters translate into a JSON object:\n",
+      "Based on this analysis, the JSON object is:\n",
       "\n",
       "```json\n",
       "{\n",
-      "  \"amount_of_income\": \"45 M Tomans\",\n",
+      "  \"amount_of_income\": 5500,\n",
       "  \"month_of_income\": null,\n",
       "  \"years_in_bank\": 3,\n",
       "  \"age\": null\n",
       "}\n",
       "```\n",
-      "\n",
-      "This JSON object captures all available information and assigns `null` to any missing data.\n",
-      "Provided parameters (from LLM extraction): {'amount_of_income': '45 M Tomans', 'month_of_income': None, 'years_in_bank': 3, 'age': None}\n",
-      "Final parameters for evaluation: {'amount_of_income': 350.0, 'month_of_income': 5.0, 'years_in_bank': 3, 'age': 24.0}\n",
-      "Answer: 1619999998.88\n"
+      "Provided parameters (from LLM extraction): {'amount_of_income': 5500, 'month_of_income': None, 'years_in_bank': 3, 'age': None}\n",
+      "Final parameters for evaluation: {'amount_of_income': 5500, 'month_of_income': 4.0, 'years_in_bank': 6.0, 'age': 45.0}\n",
+      "Answer: 21995.2\n"
      ]
     }
    ],
@@ -1775,9 +1764,9 @@
     "# ----------------------------------------------------------------------------\n",
     "\n",
     "# Example user input (for customer score calculation):\n",
-    "user_input = \"I have account in the bank for 3 years. My income is 45 M Tomans. How much is my score?\"\n",
+    "# user_input = \"I have account in the bank for 3 years. My income is 45 M Tomans. How much is my score?\"\n",
     "# Or in Persian:\n",
-    "# user_input = \"من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
+    "user_input = \"من 3 ساله که توی بانک حساب دارم. درآمد من معادل 5500 میلیون تومانه. امتیاز من در بانک چقدر میشه؟\"\n",
     "\n",
     "# Step 1: Use the router chain to decide which formula chain to use.\n",
     "router_result = router_chain({\"question\": user_input})\n",
