improve parser whe the output is not json #1

--- a/final_math_langchain.ipynb
+++ b/final_math_langchain.ipynb
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,10 +1655,17 @@
     "            return line_clean\n",
     "    return text\n",
     "\n",
+    "\n",
+    "\n",
+    "# import json\n",
+    "import ast\n",
+    "\n",
     "def parse_extraction_result(result_str: str) -> dict:\n",
     "    \"\"\"\n",
-    "    Extract the JSON object from the LLM output.\n",
-    "    This function finds the first '{' and the last '}' and parses that substring.\n",
+    "    Extract the dictionary from the LLM output.\n",
+    "    First, find the first '{' and the last '}'.\n",
+    "    Then try to parse that substring as JSON. \n",
+    "    If that fails (e.g. due to single quotes), fall back to ast.literal_eval.\n",
     "    \"\"\"\n",
     "    start = result_str.find('{')\n",
     "    end = result_str.rfind('}') + 1\n",
@@ -1668,7 +1675,28 @@
     "    try:\n",
     "        return json.loads(json_str)\n",
     "    except Exception as e:\n",
-    "        raise ValueError(f\"Error parsing JSON: {e}\")\n",
+    "        # Fallback: try ast.literal_eval, which can handle Python dict syntax\n",
+    "        try:\n",
+    "            return ast.literal_eval(json_str)\n",
+    "        except Exception as e2:\n",
+    "            raise ValueError(f\"Error parsing extraction result: {e2}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# def parse_extraction_result(result_str: str) -> dict:\n",
+    "#     \"\"\"\n",
+    "#     Extract the JSON object from the LLM output.\n",
+    "#     This function finds the first '{' and the last '}' and parses that substring.\n",
+    "#     \"\"\"\n",
+    "#     start = result_str.find('{')\n",
+    "#     end = result_str.rfind('}') + 1\n",
+    "#     if start == -1 or end == -1:\n",
+    "#         raise ValueError(\"No JSON object found in the output.\")\n",
+    "#     json_str = result_str[start:end]\n",
+    "#     try:\n",
+    "#         return json.loads(json_str)\n",
+    "#     except Exception as e:\n",
+    "#         raise ValueError(f\"Error parsing JSON: {e}\")\n",
     "\n",
     "def fill_or_override_parameters(provided_params: dict, required_params: list) -> dict:\n",
     "    \"\"\"\n",
